[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Drew Wyatt <drew.j.wyatt@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day-1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
